# Niflect

./: .gitignore  .gitmodules  LICENSE.md  README.md
CMake/: CommonAfterProject.cmake  CommonBeforeProject.cmake  Get7z.cmake  GetZip.cmake  ImportShared.cmake  Install.cmake  InstallExecutable.cmake  InstallLibrary.cmake  ProjectBegin.cmake  ProjectEnd.cmake  Release.cmake  Setup.cmake
Doc/Introduction/ConceptualExperiment/English/: README.md
Doc/Introduction/中文/: README.md
Project/: CommonAfterProject.cmake  CommonBeforeProject.cmake  InitRootPath.cmake  Install.cmake  Release.cmake  RootPathSetup.cmake  Setup.cmake
Project/Niflect/: CMakeLists.txt  Install.cmake  ReleaseNotesDetail.md  VersionConfig.cmake
Project/Niflect/Niflect/: CMakeLists.txt  Licensed_SortedVector.cmake  Shared.cmake
Project/Niflect/NiflectGenCLI/: CMakeLists.txt
Project/NiflectGenTool/: CMakeLists.txt  Install.cmake  VersionConfig.cmake
Project/NiflectGenTool/Niflect/: CMakeLists.txt
Project/NiflectGenTool/NiflectGen/: CMakeLists.txt  Licensed_libclang.cmake  Shared.cmake
Project/NiflectGenTool/NiflectGenTool/: CMakeLists.txt  Exe.cmake  Licensed_CommandLineArgParser.cmake
Project/NiflectGenToolTest/: CMakeLists.txt  Licensed_googletest.cmake
Project/Test/: CMakeLists.txt  TestIntegrateNiflectGenTool.cmake
Project/Test/NiflectGen/: CMakeLists.txt
Project/Test/Test0/: CMakeLists.txt  SaveLoad.cpp
Project/Test/Test1/: CMakeLists.txt  SaveLoadByModuleInfo.cpp  SaveLoadByModuleInfo.h  Test1AccessorSetting.h
Project/Test/Test1/BeingTested/: CMakeLists.txt  Test1BeingTested.cpp  Test1BeingTested.h  Test1BeingTestedAccessorSetting.h  Test1BeingTestedHeader.h  Test1BeingTestedSource.cpp
Project/Test/Test1/BeingTested/Niflect/: CMakeLists.txt
Project/Test/Test2/: CMakeLists.txt  Test2AccessorSetting.h  TestGenTool.cpp  TestGenTool.h  TestTypes0.cpp  TestTypes0.h  TestTypes1.cpp  TestTypes1.h  TestUtil.h
Project/Test/Test3/: CMakeLists.txt  TestApp.cpp  TestApp.h
Project/Test/Test3/TestLib/: CMakeLists.txt  TestLib.cpp  TestLib.h  TestLibAccessorSetting.h
Project/Test/TestEditorCLI/: CMakeLists.txt  w未接入googletest宏前的测试结果.txt
Project/Test/TestEditorCLI/TestEditorCLI/: CMakeLists.txt
Project/Test/TestEditorCLI/TestEngine/: CMakeLists.txt
Project/Test/TestEditorCLI/TestModule0/: CMakeLists.txt
Project/Test/TestEditorCLI/TestModule1/: Shared.cmake
Source/Niflect/include/Niflect/: NiflectAccessor.h  NiflectAccessorSetting.h  NiflectAddr.h  NiflectCommon.h  NiflectField.h  NiflectMacro.h  NiflectMethod.h  NiflectModuleInfo.h  NiflectModuleManager.h  NiflectModuleRegistry.h  NiflectTable.h  NiflectType.h
Source/Niflect/src/Niflect/: NiflectAccessor.cpp  NiflectField.cpp  NiflectMethod.cpp  NiflectModuleManager.cpp  NiflectModuleRegistry.cpp  NiflectTable.cpp  NiflectType.cpp
Source/NiflectGen/: NiflectGenDevelopmentMacro.h
Source/NiflectGen/Base/: NiflectGenDefinition.h
Source/NiflectGen/CodeWriter/: GenTimeNiflectMacro.cpp  GenTimeNiflectMacroTag.cpp  GenTimeNiflectMacroTag.h  ModuleApiMacroHeaderWriter.cpp  ModuleApiMacroHeaderWriter.h
Source/NiflectGen/CodeWriter/HardCoded/: InheritableTypeTemplate2.h  ModuleRegTemplate.h  StaticGetTypeTemplate.h  TypeRegInitialRegTemplate.h
Source/NiflectGen/CodeWriter/ModuleReg/: CreateTypeAccessorCodeWriter.cpp  ModuleRegCode.cpp  ModuleRegCode.h  ModuleRegCodeWriter.cpp  StaticGetTypeSpecCodeWriter.cpp
Source/NiflectGen/CodeWriter/TypeReg/: InheritableTypeRegCodeWriter2.cpp  InheritableTypeRegCodeWriter2.h  MiscTypeRegCodeWriter.cpp  MiscTypeRegCodeWriter.h  ModuleRegisteredTypeHeaderCodeWriter.cpp  TypeAccessorCodeWriter.cpp  TypeAccessorCodeWriter.h  TypeRegCodeWriter.cpp  TypeRegCodeWriter.h
Source/NiflectGen/Collector/: AccessorSettingMapping.cpp  AccessorSettingMapping.h  AliasChain.cpp  AliasChain.h  CollectionData.h  Collector.cpp  Collector.h  GlobalsCollection.cpp  GlobalsCollection.h  TaggedNode.cpp  TaggedNode.h
Source/NiflectGen/Generator/: BypassSTLHeaders.cpp  BypassSTLHeaders.h  Generator.cpp  Generator.h
Source/NiflectGen/Log/: Log.cpp  Log.h
Source/NiflectGen/Resolver/: ResocursorNode.cpp  ResocursorNode.h  ResolvedData.h  Resolver.cpp  Resolver.h
Source/NiflectGen/TaggedType/: TaggedClass.cpp  TaggedClass.h  TaggedInheritableType.cpp  TaggedInheritableType.h  TaggedStruct.cpp  TaggedType.cpp  TaggedType.h
Source/NiflectGen/Test/: TestAccessorSettingAccessorFinding.h  TestAccessorSettingAccessorResocursorName.h  TestAccessorSettingAccessorTypeAliass.h  TestAccessorSettingAllowedAliasFieldType.h  TestAccessorSettingBindingTypesAllUnique.h  TestAccessorSettingBindingTypesDuplicated.h  TestAccessorSettingCodeGen0.h  TestAccessorSettingFieldResocursorName.h  TestAccessorSettingFullScopes.h  TestAccessorSettingRequiredHeader.h  TestAllowedAliasFieldType.h  TestFieldResocursorName.cpp  TestGen.cpp  TestModuleHeaderAccessorFinding.h  TestModuleHeaderCodeGen0.h  TestModuleHeaderFieldResocursorName0.h  TestModuleHeaderFieldResocursorName1.h  TestModuleHeaderFieldResocursorName10.h  TestModuleHeaderFieldResocursorName11.h  TestModuleHeaderFieldResocursorName12.h  TestModuleHeaderFieldResocursorName13.h  TestModuleHeaderFieldResocursorName14.h  TestModuleHeaderFieldResocursorName15.h  TestModuleHeaderFieldResocursorName16.h  TestModuleHeaderFieldResocursorName2.h  TestModuleHeaderFieldResocursorName3.h  TestModuleHeaderFieldResocursorName4.h  TestModuleHeaderFieldResocursorName5.h  TestModuleHeaderFieldResocursorName6.h  TestModuleHeaderFieldResocursorName7.h  TestModuleHeaderFieldResocursorName8.h  TestModuleHeaderFieldResocursorName9.h  TestModuleHeaderRequiredHeader.h  TestSomeTypes.h
Source/NiflectGen/Util/: CursorUtil.cpp  CursorUtil.h  WriterUtil.cpp  WriterUtil.h
Source/NiflectGenCLI/: Main.cpp
Source/NiflectGenTool/: Main.cpp
Source/TestEditorCLI/include/Asset/: EdAsset.h
Source/TestEngine/include/: EngineAccessorSetting.h
Source/TestEngine/include/Engine/: DerivedObject.h  EngineObject.h
Source/TestEngine/src/Engine/: Asset.h  (+1 more)
Test/NiflectGenTool/: CMakeLists.txt  TestExample_0.cpp
(+28 files in other folders)
